--- a/predictor/templates/main.html
+++ b/predictor/templates/main.html
@@ -6,77 +6,156 @@
     <title>Legal Outcome Predictor</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
+        body {
+            background: rgb(2,0,36);
+            background: linear-gradient(45deg, rgba(2,0,36,1) 0%, rgba(95,95,105,1) 76%, rgba(114,116,131,1) 100%);
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column; 
+            color: #ffffff; 
+        }
         .container {
             padding-top: 20px;
+            flex: 1; 
+        }
+        .navbar {
+            background-color: transparent !important;
+            position: fixed; 
+            width: 100%;
+            z-index: 1000; 
+            box-shadow: none; 
+        }
+        .login-message {
+            position: absolute; 
+            top: 60%; 
+            left: 50%; 
+            transform: translate(-50%, -50%);
+        }
+        .footer {
+            background-color: transperent;
+            color: #ffffff; 
+            padding: 10px 0;
+            text-align: center;
+            width: 100%;
+            position: fixed; 
+            bottom: 0;
+            left: 0;
         }
         .question-container, .history-container {
             height: 100%;
-            background-color: #f0f0f0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+            background-color: rgba(40, 42, 54, 0.8); 
+            border-radius: 1rem; 
             padding: 20px;
-            margin-top: 60px;
+            margin-top: 100px;
             max-height: 70vh; 
             overflow-y: auto;
+            box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.5); 
         }
         .query-container {
-            background-color: #fff;
-            border: 1px solid #ccc;
+            background-color: rgba(255, 255, 255, 0.2); 
             border-radius: 5px;
             padding: 10px;
             margin-bottom: 10px;
             cursor: pointer;
+            transition: background-color 0.3s; 
         }
         .query-container:hover {
-            background-color: #f0f0f0;
+            background-color: rgba(255, 255, 255, 0.5); 
         }
-        .footer {
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            background-color: #f8f9fa;
-            padding: 10px 0;
-            text-align: center;
+        .query-container a {
+            color: #ffffff; 
+        }
+        .query-container p {
+            margin-bottom: 0;
         }
         textarea.form-control {
             height: 400px; 
             resize: none;
         }
+        .btn {
+            color: #ffffff; 
+        }
+        .btn-primary, .btn-secondary {
+            background-color: rgba(255, 255, 255, 0.2); 
+            border: none
+        }
+        .btn-primary:hover, .btn-secondary:hover {
+            background-color: rgba(255, 255, 255, 0.2); 
+            border: none
+        }
+        .disabled {
+            pointer-events: none; 
+            opacity: 0.6;
+            border: none
+        }
+        .custom-textarea {
+            background-color: rgba(255, 255, 255, 0.2) !important;
+            border: none !important;
+            color: #ffffff !important; 
+        }
+        
     </style>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">How to Get Away with Jail</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+            </ul>
+            {% if user.is_authenticated %}
+                <span class="navbar-text">
+                    Welcome, {{ user.username }}!  
+                </span>
+                <form action="{% url 'logout' %}" method="post" class="form-inline my-2 my-lg-0">
+                    {% csrf_token %}
+                    <button class="btn btn-secondary my-2 my-sm-0 ml-2" type="submit">Logout</button>
+                </form>
+            {% else %}
+                <a href="{% url 'login' %}" class="btn btn-secondary my-2 my-sm-0">Login</a>           
+                <a href="{% url 'register' %}" class="btn btn-secondary my-2 my-sm-0 ml-2">Register</a>
+            {% endif %}
+        </div>
+    </nav>
     <div class="container">
         <div class="row">
             <div class="col-md-8">
                 <div class="question-container">
-                    <h1 class="text-center">How to Get Away with Jail</h1>
+                    <h1 class="text-center">Sort out your case</h1>
                     <form method="post">
                         {% csrf_token %}
-                        <div class="form-group">
-                            <textarea class="form-control" name="query_text" rows="5" cols="40" maxlength="2000" placeholder="Enter your legal question..." oninput="countCharacters(this)"></textarea>
+                        <div class="form-group {% if not user.is_authenticated %}disabled{% endif %}">
+                            <textarea class="form-control custom-textarea {% if not user.is_authenticated %}disabled{% endif %}" name="query_text" rows="5" cols="40" maxlength="2000" placeholder="Enter your question..." {% if not user.is_authenticated %}disabled{% endif %} oninput="countCharacters(this)"></textarea>
                             <small class="form-text text-muted">Remaining characters: <span id="charCount">2000</span></small>
                         </div>
-                        <button type="submit" class="btn btn-primary">Predict</button>
+                        <button type="submit" class="btn btn-secondary {% if not user.is_authenticated %}disabled{% endif %}" {% if not user.is_authenticated %}disabled{% endif %}>Predict</button>
                     </form>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="history-container">
-                    <h2 class="mb-3">Query History</h2>
-                    {% if query_history %}
-                        {% for query in query_history %}
-                            <div class="query-container">
-                                <a href="{% url 'query_detail' query.id %}">
-                                {% if query.query_text|length > 20 %}
-                                <a href="{% url 'query_detail' query.id %}">{{ query.query_text|slice:":20" }}...
-                                {% else %}
-                                <a href="{% url 'query_detail' query.id %}">{{ query.query_text }}
-                                {% endif %}
-                                </a>
-                            </div>
-                        {% endfor %}
+                    <h1 class="text-center">History</h1>
+                    {% if user.is_authenticated %}
+                        {% if query_history %}
+                            {% for query in query_history %}
+                                <div class="query-container">
+                                    <a href="{% url 'query_detail' query.id %}">
+                                        {% if query.query_text|length > 27 %}
+                                            <p>{{ query.query_text|slice:":27"}}...</p>
+                                        {% else %}
+                                            <p>{{ query.query_text }}</p>
+                                        {% endif %}
+                                    </a>
+                                </div>
+                            {% endfor %}
+                        {% else %}
+                            <p>No queries yet.</p>
+                        {% endif %}
                     {% else %}
-                        <p>No queries yet.</p>
+                    <p class="text-center login-message">Login to see your question history</p>
                     {% endif %}
                 </div>
             </div>
@@ -87,7 +166,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     
     <div class="footer">
-        <p>&copy; 2024 Legal Outcome Predictor</p>
+        <p>&copy; 2024 Danya, Dasha & Max</p>
     </div>
 </body>
 </html>
