--- a/predictor/templates/question.html
+++ b/predictor/templates/question.html
@@ -1,38 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <head>
     <meta charset="UTF-8">
     <title>Query Detail</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-        /* Стили для контейнера */
+        body {
+            background: rgb(2,0,36);
+            background: linear-gradient(45deg, rgba(2,0,36,1) 0%, rgba(95,95,105,1) 76%, rgba(114,116,131,1) 100%);
+            min-height: 100vh;
+            display: flex;
+            align-items: center; /* Центрирование контента по вертикали */
+            justify-content: center; /* Центрирование контента по горизонтали */
+            color: #ffffff;
+        }
         .container {
             width: 50%;
-            margin: auto;
             padding: 20px;
-            border: 1px solid #ccc;
             border-radius: 5px;
-            background-color: #f8f9fa;
-            margin-top: 50px;
+            background-color: rgba(40, 42, 54, 0.8);
+            box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.5);
         }
-        /* Стили для заголовка */
         h1 {
             text-align: center;
         }
-        /* Стили для кнопки "Back to History" */
+        strong {
+            color: #ffffff;
+        }
         .back-button {
             display: block;
             margin-top: 20px;
             text-align: center;
+            color: #ffffff;
+            text-decoration: none;
+        }
+        .back-button:hover {
+            color: #cccccc;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Query Detail</h1>
+        <br>
+        <br>
         <strong>Your question:</strong> {{ query_detail.query_text }}<p>
-        <small>Date:</strong> {{ query_detail.timestamp }}</small>
+        
         <p><strong>Predicted Outcome:</strong> {{ query_detail.predicted_outcome }}</p>
+        <br>
         <a href="{% url 'predict_legal_outcome' %}" class="back-button">Back to main page</a>
     </div>
 </body>
